<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent" android:layout_height="match_parent" tools:context="com.car.controller.MainActivity">
<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
        <ImageView
                android:id="@+id/vd"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/Image"/>
        <TextView
                android:background="#FFFF00"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/fps_tv"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:background="#FFFF00"
                android:id="@+id/timeview"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|center"
                android:id="@+id/text_tv" android:background="#FFFF00"/>
    </FrameLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <EditText
                    android:maxLength="3"
                    android:inputType="number"
                    android:onClick="doClick"
                    android:id="@+id/distance_et"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/distance_tv"
                    android:layout_weight="1"/>
            <EditText
                    android:enabled="false"
                    android:id="@+id/ipet"
                    android:layout_weight="8"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/ip_et"
                    android:layout_gravity="center"
                    android:onClick="doClick"
                    android:gravity="center"
                    />
        </LinearLayout>
        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <Switch
                    android:text="@string/switch_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/connect_mod"
                    android:layout_alignParentBottom="true" android:layout_alignParentEnd="false"
                    android:layout_centerInParent="true" android:enabled="true" android:checked="true"/>
            <Button
                    android:onClick="doClick"
                    android:id="@+id/end"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/connect"
                    android:layout_alignStart="@+id/connect"
                    android:text="@string/end_text"/>
            <Button
                    android:onClick="doClick"
                    android:id="@+id/top"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/connect"
                    android:layout_alignStart="@+id/connect"
                    android:text="@string/top_text"/>
            <Button
                    android:onClick="doClick"
                    android:id="@+id/left"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toStartOf="@+id/connect"
                    android:layout_alignBottom="@+id/connect"
                    android:text="@string/left_text"/>
            <Button
                    android:onClick="doClick"
                    android:id="@+id/right"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/connect"
                    android:layout_alignBottom="@+id/connect"
                    android:text="@string/right_text"/>
            <Button
                    android:onClick="doClick"
                    android:id="@+id/connect"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/connect_text"/>
            <EditText
                    android:maxLength="3"
                    android:inputType="number"
                    android:onClick="doClick"
                    android:id="@+id/degrees_et"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/angle_et"
                    android:layout_weight="1" android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true"/>
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>
</android.support.constraint.ConstraintLayout>
